# AeroForge

./: .gitmodules  Action-Model.txt  CMakeLists.txt  README.md  Specs v0.1.docx  plotsrcipt.py  test1.txt
include/aeroforge_sim/: sim_core.hpp
include/sensors/: ImuSensor.h
logs/hover_ppo/PPO_1/: events.out.tfevents.1764253015.mac.home.9638.0  events.out.tfevents.1764318196.mac.home.3287.0
logs/hover_ppo/PPO_10/: events.out.tfevents.1764323682.mac.home.13230.0
logs/hover_ppo/PPO_2/: events.out.tfevents.1764253857.mac.home.12229.0  events.out.tfevents.1764318700.mac.home.4331.0
logs/hover_ppo/PPO_3/: events.out.tfevents.1764254326.mac.home.13693.0  events.out.tfevents.1764318820.mac.home.4646.0
logs/hover_ppo/PPO_4/: events.out.tfevents.1764254455.mac.home.14453.0  events.out.tfevents.1764318934.mac.home.4909.0
logs/hover_ppo/PPO_5/: events.out.tfevents.1764254595.mac.home.15375.0  events.out.tfevents.1764319107.mac.home.5279.0
logs/hover_ppo/PPO_6/: events.out.tfevents.1764254714.mac.home.15795.0  events.out.tfevents.1764321774.mac.home.9331.0
logs/hover_ppo/PPO_7/: events.out.tfevents.1764255027.mac.home.16823.0  events.out.tfevents.1764323055.mac.home.11860.0
logs/hover_ppo/PPO_8/: events.out.tfevents.1764255162.mac.home.17268.0  events.out.tfevents.1764323464.mac.home.12700.0
python/tools/: plotsrcipt.py  plotsrcipt_ppo.py
src/aeroforge_sim/: CMakeLists.txt
src/aeroforge_sim/core/: sim_core.cpp
src/sensors/: ImuSensor.cpp
tests/logs/: test.txt  train_output.txt  train_waypoint.txt
tests/python/: test_drone_nav_env.py
(+52 files in other folders)
